# Server

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: options.cmake  showoptions.cmake
cmake/macros/: CheckPlatform.cmake  ConfigureBoost.cmake  FindOpenSSL.cmake
cmake/platform/: settings.cmake
cmake/platform/win/: settings.cmake
db/src/: AuctionManager.cpp  ClientManager.h  Makefile  ProtoReader.cpp  ProtoReader.h  db.2008.vcxproj
game/src/: char.h  char_skill.cpp  config.cpp  game.2008.vcxproj  game.2008.vcxproj.filters
libgame/: libgame.2008.vcxproj
liblua/: liblua.2008.vcxproj  liblua.2008.vcxproj.filters
libpoly/: libpoly.2008.vcxproj  libpoly_d.lib
libserverkey/: CheckServerKey.h  libserverkey.vcxproj
libsql/: libsql.2008.vcxproj
libthecore/: libthecore.2008.vcxproj
src/: CMakeLists.txt  Makefile  m2server.2008.sln
src/db/: AuctionManager.h  BlockCountry.cpp  CMakeLists.txt  Cache.cpp  Cache.h  ClientManager.cpp  ClientManager.h  ClientManagerBoot.cpp  ClientManagerEventFlag.cpp  ClientManagerGuild.cpp  ClientManagerHorseName.cpp  ClientManagerLogin.cpp  ClientManagerPlayer.cpp  Config.cpp  DBManager.h  Depend  GuildManager.cpp  GuildManager.h  ItemAwardManager.cpp  Lock.cpp  Lock.h  LoginData.cpp  Main.cpp  Makefile  Marriage.cpp  Monarch.cpp  Monarch.h  PeerBase.cpp  ProtoReader.cpp  build.sh  db.2008.vcxproj  grid.cpp  stdafx.h  version.cpp
src/game/: CMakeLists.txt  ClientPackageCryptInfo.cpp  DragonLair.h  DragonSoul.h  FileMonitor_FreeBSD.cpp  Makefile  OXEvent.cpp  PetSystem.cpp  SpeedServer.h  ani.cpp  auth_brazil.cpp  block_country.cpp  buff_on_attributes.cpp  building.h  char.cpp  char.h  char_horse.cpp  char_item.cpp  char_state.cpp  cipher.cpp  cmd_general.cpp  config.cpp  config.h  constants.cpp  constants.h  db.cpp  db.h  desc.cpp  desc_client.cpp  desc_manager.cpp  desc_manager.h  dev_log.cpp  exchange.cpp  fishing.cpp  game.2008.vcproj  game.2008.vcxproj  group_text_parse_tree.cpp  group_text_parse_tree.h  input.cpp  input_auth.cpp  (+49 more)
src/game/Auction/: auction_manager.cpp  auction_manager.h
src/game/Battle/: battle.cpp
src/game/Commands/: cmd_general.cpp  cmd_gm.cpp
src/game/Entities/Character/: char.cpp  char.h  char_affect.cpp  char_manager.cpp  char_manager.h
src/game/Entities/Horse/: horsename_manager.cpp
src/game/Guilds/: guild.cpp
src/game/Items/: item.cpp  item_manager.cpp  item_manager_read_tables.cpp
src/game/Logs/: log.cpp  log.h
src/game/LuaEngine/: questlua.cpp  questlua_forked.cpp  questlua_guild.cpp  questlua_marriage.cpp  questlua_monarch.cpp  questlua_oxevent.cpp  questlua_pc.cpp  questlua_quest.cpp
src/game/Movement/: motion.h
src/game/Quests/: questevent.cpp  questmanager.cpp  questnpc.cpp  questpc.cpp
src/game/Server/: check_server.h
src/game/Server/Protocol/: packet.h  packet_info.cpp
src/game/lzo/: lzoconf.h
src/game/src/: ClientPackageCryptInfo.cpp  DragonLair.h  DragonSoul.h  FileMonitor_FreeBSD.cpp  Makefile  MarkConvert.cpp  PetSystem.cpp  SpeedServer.h  auction_manager.cpp  auction_manager.h  auth_brazil.cpp  buff_on_attributes.cpp  building.h  char.cpp  char.h  char_horse.cpp  char_item.cpp  char_manager.h  char_state.cpp  check_server.h  cmd_general.cpp  constants.cpp  constants.h  db.cpp  db.h  desc_manager.h  exchange.cpp  game.2008.vcproj  game.2008.vcxproj  group_text_parse_tree.cpp  group_text_parse_tree.h  input.cpp  input_login.cpp  input_p2p.cpp  input_teen.cpp  item.cpp  item_manager.cpp  log.h  map_location.h  monarch.h  (+30 more)
src/libgame/: libgame.2008.vcproj  libgame.2008.vcxproj
src/libgame/src/: Depend  attribute.cc  grid.cc  targa.cc
src/libmysql/4.1.22/mysql/: my_global.h
src/libmysql/4.1.25/mysql/: my_global.h
src/libmysql/5.x-5.1.35/mysql/: my_global.h
src/libmysql/6.0.2/win32/mysql/: my_global.h
src/libpoly/: Poly.cc  libpoly.2008.vcproj  libpoly.2008.vcxproj
src/libserverkey/: RSACrypto.cpp  libserverkey.vcxproj.filters
src/libsql/: AsyncSQL.h  Semaphore.h  Tellwait.h  libsql.2008.vcproj  libsql.2008.vcxproj
src/libthecore/: CMakeLists.txt  fdwatch.cpp  fdwatch.h  hangul.h  libthecore.2008.vcproj  libthecore.2008.vcxproj  log.cpp  memcpy.c  signal.cpp  socket.cpp  stdafx.h  tea.s  utils.cpp  xdirent.cpp
src/libthecore/include/: log.h  socket.h  typedef.h  utils.h
src/libthecore/src/: main.c  xgetopt.c  xmd5.c
src/lua/: CMakeLists.txt  llex.c
src/lua.new/: lauxlib.h  luaconf.h
src/shared/: CMakeLists.txt
src/shared/common/: CMakeLists.txt  attribute.cc  grid.cc
src/shared/libmysql/6.0.2/win32/mysql/: config-win.h  my_config.h
src/shared/libsql/: AsyncSQL.cpp  AsyncSQL.h  Semaphore.cpp  Tellwait.cpp  stdafx.h
src/teen/src/: input.c
src/teen/src/INCLUDE/mysql/: my_global.h
