##
# This file is part of the enhanceMT Project.
# Based on TrinityCore project cmake files.
##

add_subdirectory(common)
add_subdirectory(db)
#add_subdirectory(game)
#add_subdirectory(libdevil)
#add_subdirectory(libgame)
#add_subdirectory(libhackshield)
#add_subdirectory(liblua)
#add_subdirectory(libmysql)
#add_subdirectory(libpoly)
#add_subdirectory(libserverkey)
#add_subdirectory(libsql)
#add_subdirectory(libthecore)
#add_subdirectory(libxtrap)
#add_subdirectory(teen)